add_library(ConTypes)
target_sources(ConTypes
	PRIVATE
		CodepointWidthDetector.cpp
		ColorFix.cpp
		colorTable.cpp
		convert.cpp
		GlyphWidth.cpp
		ScreenInfoUiaProviderBase.cpp
		sgrStack.cpp
		TermControlUiaProvider.cpp
		TermControlUiaTextRange.cpp
		ThemeUtils.cpp
		UiaTextRangeBase.cpp
		UiaTracing.cpp
		utils.cpp
		viewport.cpp
)

target_precompile_headers(ConTypes
	PRIVATE
		precomp.h
)
